--- a/package.json
+++ b/package.json
@@ -1,12 +1,46 @@
 {
-  "name": "opencode-type-inject",
-  "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  }
+	"name": "@nick-vi/opencode-type-inject",
+	"version": "0.1.0",
+	"description": "OpenCode plugin that auto-injects TypeScript types into file reads and provides type lookup tools",
+	"keywords": [
+		"opencode",
+		"plugin",
+		"typescript",
+		"types",
+		"llm"
+	],
+	"type": "module",
+	"main": "./.opencode/plugin/type-inject.ts",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nick-vi/opencode-type-inject.git"
+	},
+	"homepage": "https://github.com/nick-vi/opencode-type-inject#readme",
+	"bugs": {
+		"url": "https://github.com/nick-vi/opencode-type-inject/issues"
+	},
+	"license": "MIT",
+	"author": "nick-vi",
+	"scripts": {
+		"test": "bun test ./tests/*.test.ts",
+		"typecheck": "tsc --noEmit"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.8",
+		"@opencode-ai/plugin": "^1.0.134",
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5",
+		"@opencode-ai/plugin": ">=1.0.0"
+	},
+	"dependencies": {
+		"ts-morph": "^27.0.2"
+	},
+	"files": [
+		".opencode/"
+	],
+	"publishConfig": {
+		"access": "public"
+	}
 }
