--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"exclude": ["tests/fixtures/svelte/ts-imports-svelte.ts"],
 	"compilerOptions": {
 		// Environment setup & latest features
 		"lib": ["ESNext"],
