feat: convert to monorepo with Claude Code plugin support
- Restructure as Bun workspaces with three packages:
  - @nick-vi/type-inject-core: shared extraction library
  - @nick-vi/opencode-type-inject: OpenCode plugin
  - @nick-vi/claude-type-inject: Claude Code plugin

- Add Claude Code integration:
  - MCP server with lookup_type and list_types tools
  - PostToolUse hook for automatic type injection
  - Hook respects partial reads (offset/limit)

- Consolidate config to core package

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .DS_Store
 
 tmp/
+
+# Root dev node_modules (if any)
+/.opencode/node_modules/
+
+# Package build artifacts
+packages/*/dist/
