feat: split Claude packages and add TypeScript declarations
- Split @nick-vi/claude-type-inject into:
  - @nick-vi/claude-type-inject-mcp (MCP server)
  - @nick-vi/claude-type-inject-hook (Read hook)
- Add TypeScript declaration files to core package
- Add changesets for versioning
- Update README with new installation instructions
- Configure OIDC publishing workflow

--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
 	"scripts": {
 		"test": "bun --filter '*' test",
 		"typecheck": "bun --filter '*' typecheck",
-		"lint": "bunx biome check ."
+		"lint": "bunx biome check .",
+		"changeset": "changeset",
+		"version": "changeset version && bun update",
+		"release": "npm publish -w packages/core --access public && npm publish -w packages/opencode --access public && npm publish -w packages/claude-mcp --access public && npm publish -w packages/claude-hook --access public && changeset tag"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.8"
+		"@biomejs/biome": "^2.3.8",
+		"@changesets/cli": "^2.29.8"
 	}
 }
