feat: rename MCP package to @nick-vi/type-inject-mcp
- Renamed from @nick-vi/claude-type-inject-mcp (general purpose MCP server)
- Updated README with correct configs for OpenCode, Claude Code, and Cursor
- Read version from package.json dynamically

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"lint": "bunx biome check .",
 		"changeset": "changeset",
 		"version": "changeset version && bun update",
-		"release": "npm publish -w packages/core --access public || true; npm publish -w packages/opencode --access public || true; npm publish -w packages/claude-mcp --access public || true; npm publish -w packages/claude-hook --access public || true; changeset tag"
+		"release": "npm publish -w packages/core --access public || true; npm publish -w packages/opencode --access public || true; npm publish -w packages/mcp --access public || true; npm publish -w packages/claude-hook --access public || true; changeset tag"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
