--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -23,6 +23,10 @@
 	"devDependencies": {
 		"@types/bun": "latest"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nick-vi/type-inject"
+	},
 	"publishConfig": {
 		"access": "public"
 	}
