style: apply biome formatting and lint fixes
- Use node: protocol for Node.js imports
- Use template literals for string concatenation
- Remove unused isModule variable in lookup.ts
- Sort imports in affected files

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "type-inject",
 	"private": true,
-	"workspaces": ["packages/*"],
+	"workspaces": [
+		"packages/*"
+	],
 	"scripts": {
 		"test": "bun --filter '*' test",
 		"typecheck": "bun --filter '*' typecheck",
